
 - ``SELECT`` statements without any ``FROM`` items are no longer executed
   against the ``sys.cluster`` table, but against a virtual table with no
   columns. Queries including ``sys.cluster`` columns but no explicit ``FROM``
   item will now result in a ``ColumnUnknownException``.

 - onModule() method had been removed from io.crate.Plugin interface,
   so createGuiceModules() must be used instead.

 - ``srv`` and ``azure`` are no longer valid configuration options for ``discovery.type``.
   Instead there is a new ``discovery.zen.hosts_provider`` settings which can
   be set to either ``srv`` or ``azure``.

Breaking Changes (Packaging only)
=================================

 - The sigar jar and object files have been moved from ``plugins/sigar`` to
   ``lib/sigar``.

Changes
=======

 - Fixed an issue that caused an exception to be thrown when using
   ``COUNT(*)`` with subselects that return one row. E.g.::

     SELECT count(*) FROM t1 WHERE id > (select max(col1) from t2)

 - Updated Elasticsearch to 5.2.2

 - Upgraded Crash to 0.21.0.

 - Added support for ``GRANT`` and ``REVOKE`` privileges for accessing the
   cluster. Currently supported privilege types: ``DQL``, ``DML`` and ``DDL``.

 - Added support for client certificate authentication via HBA.

 - Added SSL/TLS support for HTTP endpoints.

 - Added new HBA setting ``ssl`` which allows to control whether
   users have to connect with ssl enabled or disabled.

 - Added SSL/TLS support for PostgreSQL Wire Protocol.

 - Extended the output of the  ``EXPLAIN`` statement.

 - Added support for joins on virtual tables.

Fixes
=====

 - Fix thread-safety issue for scalar functions ``md5`` and ``sha1``

 - ``information.schema.tables`` now returns the default routing hash function
   if none is present in the table metadata.
   (Issue: https://github.com/crate/crate/issues/5857)

 - Throw proper exception when using the ``_raw`` column inside the where clause
   instead of silently ignoring it.
